--- a/Client/app/globals.css
+++ b/Client/app/globals.css
@@ -32,7 +32,7 @@
 }
 
 .bg-custon-C1 {
-  background-color: #ac1754;
+  background-color: #83caf4;
 }
 .bg-custon-C2 {
   background-color: #e53888;
